<resources>
    <string name="app_name">WingsTestCandidate</string>
    <string name="label_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="error_login_not_success">Login not success!</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_buy">Buy</string>
    <string name="label_price">Price</string>
    <string name="label_price_unit">Price Unit</string>
    <string name="label_dimension">Dimension</string>
    <string name="label_sub_total">Sub Total :</string>
    <string name="label_pcs">Pcs</string>
    <string name="label_total">Total :</string>
    <string name="label_confirm">Confirm</string>
</resources>