<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.checkout.CheckoutActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelCheckout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16"
        android:text="@string/label_checkout"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_32" />

    <LinearLayout
        android:id="@+id/layoutTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabelCheckout"
        android:layout_marginHorizontal="@dimen/dimen_24"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_total"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            tools:text="Rp. 45.000,-" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCheckout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnConfirm"
        android:layout_below="@id/layoutTotal"
        android:layout_marginTop="@dimen/dimen_16"
        tools:listitem="@layout/item_checkout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/dimen_32"
        android:layout_marginBottom="@dimen/dimen_24"
        android:minHeight="@dimen/dimen_60"
        android:text="@string/label_confirm"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dimen_32" />

</RelativeLayout>